puliendo el editor uml

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ERP</title>
+    <title>UML</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.o" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,12 @@
     <link href="https://cdn.syncfusion.com/ej2/ej2-popups/styles/material.css" rel="stylesheet" />
     <link href="https://cdn.syncfusion.com/ej2/ej2-splitbuttons/styles/material.css" rel="stylesheet" />
     <link href="https://cdn.syncfusion.com/ej2/ej2-buttons/styles/material.css" rel="stylesheet" />
-    
+
+
+    <!-- Syncfusion EJ2 Tailwind themes -->
+    <!-- <link href="https://cdn.syncfusion.com/ej2/24.1.41/tailwind.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/ej2/24.1.41/tailwind-dark.css" rel="stylesheet" /> -->
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 
